Project_3/hw3.txt
//CS 35L - Professor Eggert
//Lab 4 - TA Isha Verma
//Project 2 - Shell Scripting
//hw3.txt

(1) Brady removed the line "case long_iso_time_style:" due to the fact that it 
    was a goto statement within a switch statement. It ultimately was 
    unnecessary to remove the line because the line was a part of the switch 
    statement. 	However, as the line was repeated twice, Brady removed it in 
    an attempt to clean up the code.

(2) Brady's patch changed the time style from the two field numeric ISO style
    to the traditional three field time style. This changed the format so
    that it is easily readable to those who speak English or simply know how 
    to read English dates. However, for non-English countries, this time style 
    change could potentially confuse the users who aren't familiar with the 
    English date. Thus, issues might arise with the altered format.

(3) When randline.py is invoked on the empty file /dev/null, it produces 
    this output:

    Traceback (most recent call last):
  File "./randline.py", line 70, in <module>
    main()
  File "./randline.py", line 64, in main
    sys.stdout.write(generator.chooseline())
  File "./randline.py", line 34, in chooseline
    return random.choice(self.lines)
  File "/usr/lib64/python2.7/random.py", line 274, in choice
    return seq[int(self.random() * len(seq))]  # raises IndexError 
    if seq is empty
  IndexError: list index out of range
 
    First of all, /dev/null is an empty file, in which data written to 
    it will disappear. As /dev/null doesn't save anything written to 
    it, when the script attempts to retrieve a random line number, it 
    will be out of range, as the error specified.

(4) When invoked with python3, the command outputs:

    File "./randline.py", line 65
    except IOError as (errno, strerror):
                      ^
SyntaxError: invalid syntax

    This occurs because Python 2 and Python 3 have different syntaxes 
    from one another.While Python 2 exhibited an automatic tuple unpacking 
    option, Python 3 removed the tuple parameter unpacking.


            
